# OSMAN-ADIKA-UAP-SEM7-ML

./: .gitignore  .pdm-python  README.md  Requirements.txt  pyproject.toml
Main/Backup/: encoding.py  scaler.py
Main/src/: Rain Prediction.py  app.py  wind.py
Main/src/model/: encoders.pkl  fnn_model.h5  scaler.joblib  wind_dir_3pm_encoder.pkl
