[project]
name = "Latihan_M6"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "OsmanAdieka", email = "osmanadika34@gmail.com"},
]
dependencies = ["streamlit==1.37.0", "tensorflow>=2.18.0", "joblib>=1.4.2", "scikit-learn>=1.6.0", "tensorflow-io-gcs-filesystem==0.31.0"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "streamlit run ./Main/src/app.py"
